# Quick-Authenticator

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  manifest.json  package-lock.json  package.json  sw.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: build-and-deploy-web.yml  build-android.yml  build-macos.yml  build-windows.yml  build.yml  deploy-web.yml
assets/: index-7PhADxBM.js  index-Bv37R-XD.js  index-C-BIId1u.js  index-C8SHhw4W.js  index-DQQ0xcRk.js  tauri-backend-Chiu7yTX.js  tauri-backend-Dbi_USV-.js  web-backend-BsN4pF7i.js  web-backend-DC65gEn6.js
fonts/: fonts.css
public/fonts/: fonts.css
scripts/: generate-icons.mjs  get-latest-tag.mjs  setup-android-signing.mjs
src/: duo-activate.js  google-migrate.js  i18n.js  main.js  okta-activate.js  passkey-store.js  platform.js  push-service.js  qr.js  tauri-backend.js  web-backend.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/stubs/: tauri-stub.js
