[package]
name = "quick-authenticator"
version = "1.0.0"
description = "快捷验证器 — Quick Authenticator compatible with Google Authenticator & Okta Verify"
authors = ["sean@kineviz.com"]
edition = "2021"

[lib]
name = "quick_authenticator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quick-authenticator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
